# pyceac

./: .gitignore  LICENSE  README.md
checkers/: README.md
checkers/1/: checker.py  numpy.output  numpy.output.manual.txt  pillow.output
checkers/2/: checker.py  pillow.output
checkers/3/: checker.py  pillow-3-1.output  pillow-3-2.output
checkers/4-5-8-10/: checker.py  pillow-10-1.output  pillow-10-2.output  pillow-4.output  pillow-5.output  pillow-8.output
code/: README.md  api_check.py  api_statistic.py  base_statistic.py  base_statistic_ex.py  comp-all.sh  corpus-path.txt  diff.py  distinct.py  pycapi.py  pycapi_comp.py  python-path.txt  run.sh  similarity.py  tool-build.sh
code/fake_include/: _fake_defines.h  pyconfig.h
code/function_prototype/: CMakeLists.txt  function-prototype.c
code/token_processor/: CMakeLists.txt  token-processor.c
corpus/: list-corpus.csv
corpus/python/: list-python.csv
